Completed actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,25 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME:  ${{ github.repository }}
 
-job:
+jobs:
   build:
     runs-on: ubuntu-latest
-    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Setup docker buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: login to docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERNAME }}
+          password: ${{ secrets.DOCKERPWD }}
+
+      - name: Build and push docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: pvskdocker/silly-images:V1
+        
